# oceana-jwt-auth

./: README.md  pytest.ini  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
examples/: _mock_auth_data.py  app_factory_pattern.py  create_decorator.py  flask_restx_api.py  jwt_additional_info.py  token_verification.py
src/oceana_jwt_auth/: __init__.py  auth_provider.py  jwt_extension.py  main.py  mock_auth_data.py
src/oceana_jwt_auth/config/: config.py
src/oceana_jwt_auth/models/db/: auth_model.py
src/oceana_jwt_auth/utils/: __init__.py  crypto.py  logger.py
tests/: __init__.py  conftest.py
tests/functional/: test_validation.py
tests/unit/: test_application.py  test_auth_provider.py  test_callbacks.py  test_common.py  test_crypto.py  test_decorators.py  test_jwt_handler.py  test_utils.py
