[bumpversion]
current_version = 0.0.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<release>\w+)\.(?P<build>\d+))?
serialize =
    {major}.{minor}.{patch}-{release}.{build}
    {major}.{minor}.{patch}
commit = True
tag = False

[metadata]
description_file =
    README.md

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
exclude = build,.git,.tox,.vscode,.github,logs,htmlcov,.pytest_cache,dist
max-line-length = 120
per-file-ignores =
    **/__init__.py: F401, F403
    # Ignore in examples
    examples/*.py: B903

[bumpversion:file:setup.py]

[bdist_wheel]
universal = 0
